# IDS

./: CMakeLists.txt  README.md  config.json
include/: config_parser.h  diff_engine.h  file_watcher.h  logger.h
src/: config_parser.cpp  diff_engine.cpp  file_watcher.cpp  logger.cpp  main.cpp
